--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "Prüfung M324",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "format-check": "prettier --check .",
+    "start": "npm run format-check && npm run lint && node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "chalk": "^5.3.0",
     "eslint": "^9.16.0",
+    "globals": "^15.13.0",
     "prettier": "^3.4.2"
   }
 }
