--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
-    "start": "npm run format-check && npm run lint && node index.js"
+    "convert-md": "node index.js",
+    "start": "npm run format-check && npm run lint && npm run convert-md"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "marked": "^4.3.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "chalk": "^5.3.0",
